fix: Tag styling on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -128,6 +128,9 @@ $aside-background-color: white;
 
   .tags {
     padding-bottom: 1rem;
+    display: flex;
+    gap: .5rem;
+    flex-wrap: wrap;
   }
 
   .tag {
